--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.3.0",
     "@react-native-firebase/auth": "^21.3.0",
     "@react-native-firebase/firestore": "^21.3.0",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-responsive-dimensions": "^3.1.1"
   },
   "devDependencies": {
